feat: add utility classes to hide scrollbars

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -58,3 +58,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
